Fix chart overflow

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -69,7 +69,7 @@ body {
 .chart {
     position: absolute;
     width: 60%;
-    right: -30px;
+    right: 0px;
     top: 50%;
     transform: translate(0%, -50%);
 }
